testsuite/tests/overloadedrecflds/should_fail/NFSSuppressed.hs
{-# LANGUAGE NoFieldSelectors #-}

module NFSSuppressed where

import Prelude

data Foo = Foo { foo :: Int }

x = foo
