testsuite/tests/overloadedrecflds/should_fail/NFSSuppressed.stderr

NFSSuppressed.hs:9:5: error:
    • Variable not in scope: foo
    • Perhaps you meant data constructor ‘Foo’ (line 7)
      NB: ‘foo’ is a field selector belonging to the type ‘Foo’
      that has been suppressed by NoFieldSelectors
